Fix 0x55 pairing error - Add IO capability and enable bond clearing
Critical fixes to prevent iOS pairing failures:
- Set IO capability to ESP_IO_CAP_NONE (matches working original)
- Enable clear_bonds_on_startup by default in example
- Add missing auth option parameter

These changes align with the working original implementation
and should resolve the 0x55 'Pairing Not Supported' error.

--- a/example.yaml
+++ b/example.yaml
@@ -62,7 +62,7 @@ esp32_ble_server:
 esp32_ble_irk:
   id: ble_irk
   auto_extract: true
-  clear_bonds_on_startup: false
+  clear_bonds_on_startup: true  # CRITICAL: Prevents 0x55 pairing errors
   on_pairing_started:
     - lambda: |-
         ESP_LOGI("irk", "Device started pairing: %s", address.c_str());
